See RN2.9.0a (20220309)